tests/lean/shadow.lean.expected.out
shadow.lean:8:13: error: invalid equation, variable 'a' has the same name of a variable in an outer-scope (solution: rename this variable)
